# metastable

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  justfile
crates/api/: Cargo.toml
crates/api/src/: cache_helpers.rs  env.rs  global_state.rs  lib.rs  metrics.rs  middleware.rs  response.rs  utils.rs  voice.rs
crates/api/src/routes/: auth.rs  characters.rs  conversation.rs  graphql.rs  memory.rs  misc.rs  mod.rs  runtime.rs  stripe.rs  system_config.rs  tts.rs  user.rs
crates/clients/: Cargo.toml
crates/clients/src/: consts.rs  embeder.rs  fish_audio.rs  lib.rs  llm.rs  neo4j.rs  postgres.rs  r2.rs  redis_client.rs  vector.rs
crates/common/: Cargo.toml
crates/common/src/: client.rs  crypto.rs  crypto_hash.rs  env.rs  lib.rs
crates/database/: Cargo.toml  hasura_metadata.json
crates/database/src/: db.rs  db_object.rs  env.rs  lib.rs  mongodb.rs  postgres_connect.rs  sqlx_postgres.rs  sqlx_postgres_traits.rs
crates/db-macros/: Cargo.toml
crates/db-macros/src/: lib.rs
crates/db-macros/src/internals/: codegen.rs  mod.rs  parse.rs  types.rs
crates/db-macros/src/text_codec_internals/: codegen.rs  parse.rs
crates/db-macros/tests/: text_enum_codec.rs
crates/graph/: Cargo.toml
crates/graph/src/: add.rs  del.rs  env.rs  lib.rs  main.rs  relation.rs  search.rs
crates/graph/src/llm/: del_relationship.rs  extract_entity.rs  extract_relationship.rs  mod.rs
crates/llm-macros/: Cargo.toml
crates/llm-macros/src/: lib.rs
crates/llm-macros/src/llm_tool_internals/: codegen.rs  parse.rs
crates/llm-macros/tests/: roleplay.rs  summarize_character.rs
crates/pgvector/: Cargo.toml
crates/pgvector/src/: env.rs  lib.rs  main.rs  pgvector.rs
crates/pgvector/src/llm/: extract_facts.rs  extract_memory.rs  mod.rs
crates/runtime/: Cargo.toml  README.md
crates/runtime-mods/character-creation/: Cargo.toml
crates/runtime-mods/character-creation/src/: agent.rs  client.rs  lib.rs  memory.rs  message.rs
crates/runtime-mods/character-creation/src/preload/: create_character.rs  mod.rs  system_configs.rs
crates/runtime-mods/evm/: Cargo.toml
crates/runtime-mods/evm/src/: addresses.rs  client.rs  env.rs  lib.rs  wallet.rs
crates/runtime-mods/evm/src/calls/: erc20.rs  gitcoin.rs  mod.rs  multicall.rs  swap.rs  takara_lend.rs  wx.rs
crates/runtime-mods/evm/src/function_calls/: gitcoin.rs  mod.rs
crates/runtime-mods/mem0/: Cargo.toml
crates/runtime-mods/mem0/src/: engine.rs  env.rs  graph.rs  lib.rs  memory.rs  message.rs  raw_message.rs
crates/runtime-mods/mem0/src/agents/: del_relationship.rs  extract_entities.rs  extract_facts.rs  extract_relationship.rs  mod.rs  update_memory.rs
crates/runtime-mods/mem0/src/graph/: mod.rs  search.rs
crates/runtime-mods/mem0/src/llm/: del_relationship.rs  extract_entity.rs  extract_facts.rs  extract_relationship.rs  mod.rs  update_memory.rs
crates/runtime-mods/mem0/src/pgvector/: batch.rs  mod.rs  query_criteria.rs
crates/runtime-mods/multiplayer/: Cargo.toml
crates/runtime-mods/multiplayer/src/: client.rs  lib.rs  memory.rs
crates/runtime-mods/preload/: Cargo.toml
crates/runtime-mods/preload/src/: characters.rs  lib.rs  preloader.rs  sys_char_creation_v0.rs  tools.rs  (+4 more)
crates/runtime-mods/roleplay/: Cargo.toml
crates/runtime-mods/roleplay/src/: audit.rs  character.rs  character_detail.rs  character_history.rs  character_sub.rs  client.rs  env.rs  input.rs  lib.rs  memory.rs  memory_updater.rs  message.rs  message_type.rs  preload_character.rs  session.rs  user.rs  utils.rs
crates/runtime-mods/roleplay/src/agents/: character_creation_v0.rs  extract_facts.rs  memory_extractor.rs  mod.rs  prettier_v0.rs  roleplay_char_v0.rs  roleplay_char_v1.rs  roleplay_v0.rs  roleplay_v1.rs  tools.rs
crates/runtime-mods/roleplay/src/character/: audit.rs  character_history.rs  character_sub.rs  mod.rs
crates/runtime-mods/roleplay/src/legacy/: char_creation_message.rs  mod.rs  roleplay_message.rs
crates/runtime-mods/roleplay/src/preload/: characters.rs  mod.rs  system_configs.rs  tools.rs
crates/runtime-mods/roleplay/src/preload_v1/: mod.rs  system_configs.rs  tools.rs
crates/runtime-mods/roleplay/tests/: message_type.rs  sandbox.rs
crates/runtime/src/: agents.rs  character.rs  client.rs  engine.rs  env.rs  function_executor.rs  image.rs  lib.rs  llm.rs  llm_request.rs  memory.rs  message.rs  multimodel.rs  output_client.rs  prompt.rs  runtime.rs  runtime_client.rs  session.rs  system_config.rs  toolcall.rs  user.rs
crates/runtime/src/cards/: card.rs  card_pool.rs  draw_history.rs  mod.rs
crates/runtime/src/character/: audit.rs  character_detail.rs  character_history.rs  character_mask.rs  character_post.rs  character_sub.rs  mod.rs  post_comments.rs
crates/runtime/src/core/: memory.rs  mod.rs  runtime_client.rs  toolcall.rs
crates/runtime/src/roleplay/: client.rs  env.rs  memory.rs  message.rs  mod.rs
crates/runtime/src/user/: badge.rs  consumption.rs  follow.rs  log.rs  metadata.rs  mod.rs  notifications.rs  payment.rs  points.rs  profile.rs  referral.rs  url.rs  usage.rs
crates/runtime/tests/: image_generation_test.rs
docs/: README.md  mint.json  overview.mdx  package.json  pnpm-lock.yaml
docs/cookbook/: example.mdx
docs/features/: built-in-modules.mdx  roleplay.mdx  tool-calls.mdx
docs/introduction/: background.mdx  what-is-voda.mdx
docs/misc/: privacy-policy.mdx
docs/reference/: overview.mdx
scripts/: Cargo.toml  README.md
services/metastable-sandbox/: Cargo.toml
services/metastable-sandbox/src/: api_client.rs  graphql.rs  lib.rs
services/metastable-sandbox/src/config/: users.rs
services/metastable-sandbox/src/legacy/: char_creation_message.rs  character.rs  character_history.rs  mod.rs  roleplay_message.rs  sessions.rs
services/metastable-service/: Cargo.toml
services/voda-sandbox/: Cargo.toml
services/voda-sandbox/src/: api_client.rs  config.rs  graphql.rs  lib.rs  main.rs
services/voda-sandbox/src/config/: characters.rs  mod.rs  system_configs.rs  users.rs
services/voda-service/: Cargo.toml
services/voda-service/src/: db_ext.rs  lib.rs  routes.rs
(+2 files in other folders)
