[package]
name = "voda-scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
voda-common = { path = "../crates/common" }
voda-runtime = { path = "../crates/runtime" }
voda-runtime-evm = { path = "../crates/runtime-mods/evm" }
voda-runtime-roleplay = { path = "../crates/runtime-mods/roleplay" }

tokio.workspace = true
anyhow.workspace = true
