[package]
name = "metastable-service-api"
version = "0.1.0"
edition = "2021"

[dependencies]
metastable-common = { path = "../common" }
metastable-database = { path = "../database" }
metastable-runtime = { path = "../runtime" }
metastable-runtime-roleplay = { path = "../runtime-mods/roleplay" }
metastable-runtime-character-creation = { path = "../runtime-mods/character-creation" }

axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
futures.workspace = true
tracing.workspace = true

serde.workspace = true
serde_json.workspace = true

anyhow.workspace = true 

async-openai.workspace = true
reqwest.workspace = true
base64.workspace = true
rand.workspace = true
hex.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
sqlx.workspace = true