[package]
name = "metastable-clients"
version = "0.1.0"
edition = "2021"

[dependencies]
metastable-common = { path = "../common" }
metastable-database = { path = "../database" }
metastable-llm-macros = { path = "../llm-macros" }

serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true 
serde.workspace = true
reqwest.workspace = true
async-trait.workspace = true
sqlx.workspace = true

async-openai = { workspace = true, optional = true}
neo4rs = { version = "0.8.0", optional = true }

[features]
default = ["llm", "graph", "embeder", "postgres"]
llm = ["dep:async-openai"]
embeder = ["dep:async-openai"]
graph = ["dep:neo4rs", "embeder"]
postgres = ["embeder"]