[package]
name = "metastable-clients"
version = "0.1.0"
edition = "2021"

[dependencies]
metastable-common = { path = "../common" }
metastable-database = { path = "../database" }

serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true 
serde.workspace = true
reqwest.workspace = true
async-trait.workspace = true
sqlx.workspace = true

async-openai = { workspace = true, optional = true}
aws-sdk-s3 = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
redis = { workspace = true, optional = true }
uuid.workspace = true

[features]
default = ["llm", "embeder", "postgres", "r2", "fish_audio", "redis_cache"]
llm = ["dep:async-openai"]
embeder = ["dep:async-openai"]
postgres = ["embeder"]
r2 = ["dep:aws-sdk-s3", "dep:aws-config", "dep:base64"]
fish_audio = []
redis_cache = ["dep:redis"]