[package]
name = "voda-database"
version = "0.1.0"
edition = "2021"

[dependencies]
voda-common = { path = "../common" }
voda-db-macros = { path = "../db-macros"}

tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

async-openai.workspace = true

mongodb = { workspace = true, optional = true}
sqlx = { workspace = true, optional = true }

[dev-dependencies]
dotenv.workspace = true

[features]
default = ["postgres"]
postgres = ["dep:sqlx"]
mongodb = ["dep:mongodb"]