[package]
name = "metastable-database"
version = "0.1.0"
edition = "2021"

[dependencies]
metastable-common = { path = "../common" }
metastable-db-macros = { path = "../db-macros"}

tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

async-openai.workspace = true

mongodb = { workspace = true, optional = true}
sqlx = { workspace = true, optional = true }
pgvector = { version = "0.4", features = ["sqlx", "serde"], optional = true }

[dev-dependencies]
dotenv.workspace = true

[features]
default = ["postgres"]
postgres = ["dep:sqlx", "dep:pgvector"]
mongodb = ["dep:mongodb"]
