[package]
name = "voda-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
voda-common = { path = "../common" }
voda-runtime = { path = "../runtime" }

serde.workspace = true
serde_json.workspace = true

anyhow.workspace = true 

xsalsa20poly1305.workspace = true
blake3.workspace = true
base64.workspace = true
hex.workspace = true
rand.workspace = true

neo4rs = "*"

uuid.workspace = true
tokio.workspace = true
futures.workspace = true
async-openai.workspace = true
reqwest.workspace = true