[package]
name = "metastable-llm-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
async-openai.workspace = true

proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0.101", features = ["full"] }
darling = "0.20.11"

metastable-database = { path = "../database" }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
metastable-runtime-roleplay = { path = "../runtime-mods/roleplay" }
metastable-runtime = { path = "../runtime" }
metastable-runtime-mem0 = { path = "../runtime-mods/mem0" }
