[package]
name = "voda-database-pgvector"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "json"] }
async-trait = "0.1"
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-openai = "0.26.0"
chrono = { version = "0.4", features = ["serde"] }
voda-runtime = { path = "../runtime" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"
dotenv = "0.15"

pgvector = { version = "0.4", features = ["sqlx"]}