[package]
name = "voda-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
voda-common = { path = "../common" }
voda-database = { path = "../database" }
voda-db-macros = { path = "../db-macros" }

async-openai.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
mongodb.workspace = true
futures.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde_json.workspace = true
sqlx = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
sqlx = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }