[package]
name = "metastable-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
metastable-llm-macros = { path = "../llm-macros" }
metastable-common = { path = "../common" }
metastable-database = { path = "../database" }
metastable-clients = { path = "../clients" }

async-openai.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde_json.workspace = true
sqlx = { workspace = true }
uuid.workspace = true
rand.workspace = true
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
sqlx = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
hex.workspace = true