[package]
name = "metastable-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
metastable-runtime = { path = "../../crates/runtime" }
metastable-runtime-roleplay = { path = "../../crates/runtime-mods/roleplay" }
metastable-runtime-mem0 = { path = "../../crates/runtime-mods/mem0" }
metastable-database = { path = "../../crates/database" }
metastable-common = { path = "../../crates/common" }

tokio = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
once_cell = "1.19.0"
colored = "2.1.0"
rustyline = "14.0.0"
futures = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
async-openai = { workspace = true }
indicatif = { version = "0.17.8", features = ["tokio"] }
termimad = "0.23.0"
reqwest-graphql = "1.0.0"
dialoguer = "*"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }