[package]
name = "voda-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
voda-runtime = { path = "../../crates/runtime" }
voda-runtime-roleplay = { path = "../../crates/runtime-mods/roleplay" }
voda-database = { path = "../../crates/database" }
voda-common = { path = "../../crates/common" }

tokio = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
once_cell = "1.19.0"
colored = "2.1.0"
rustyline = "14.0.0"
futures = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
async-openai = { workspace = true }
indicatif = { version = "0.17.8", features = ["tokio"] }
termimad = "0.23.0"

[features]
default = [] 