[package]
name = "voda-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
voda-runtime = { path = "../../crates/runtime" }
voda-runtime-roleplay = { path = "../../crates/runtime-mods/roleplay" }
voda-database = { path = "../../crates/database" }
voda-common = { path = "../../crates/common" }

tokio = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
once_cell = "1.19.0"
colored = "2.1.0"
rustyline = "14.0.0"
futures = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
async-openai = { workspace = true }
indicatif = { version = "0.17.8", features = ["tokio"] }
termimad = "0.23.0"
reqwest-graphql = "1.0.0"
dialoguer = "*"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }