[package]
name = "voda-service"
version = "0.1.0"
edition = "2021"

[dependencies]
voda-common = { path = "../../crates/common" }
voda-database = { path = "../../crates/database" }
voda-runtime = { path = "../../crates/runtime" }
voda-service-api = { path = "../../crates/api" }

voda-runtime-roleplay = { path = "../../crates/runtime-mods/roleplay" }
voda-runtime-character-creation = { path = "../../crates/runtime-mods/character-creation" }
voda-runtime-mem0 = { path = "../../crates/runtime-mods/mem0" }

axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
futures.workspace = true
tracing.workspace = true

serde.workspace = true
serde_json.workspace = true

anyhow.workspace = true 

async-openai.workspace = true
reqwest.workspace = true
base64.workspace = true
rand.workspace = true
hex.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
sqlx.workspace = true