[package]
name = "metastable-runtime-evm"
version = "0.1.0"
edition = "2021"

[dependencies]
metastable-common = { path = "../../common" }
metastable-runtime = { path = "../../runtime" }

anyhow.workspace = true 
tokio.workspace = true

alloy-core = { version = "0.8", features = ["sol-types"] }
alloy-provider = { version = "0.7", default-features = false, features = ["reqwest", "reqwest-rustls-tls"] }
alloy-signer-local = { version = "0.7" }
alloy-signer = { version = "0.7" }
alloy-network = { version = "0.7" }
alloy-rpc-types = { version = "0.7" }

serde.workspace = true
async-openai.workspace = true
serde_json.workspace = true