[package]
name = "metastable-runtime-mem0"
version = "0.1.0"
edition = "2021"

[dependencies]
metastable-runtime = { path = "../../runtime" }
metastable-common = { path = "../../common" }
metastable-database = { path = "../../database" }
metastable-clients = { path = "../../clients" }

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true 
async-openai.workspace = true
reqwest.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
sqlx.workspace = true
chrono.workspace = true
futures.workspace = true

neo4rs = { version = "0.8.0", optional = true }

[dev-dependencies]
metastable-runtime-roleplay = { path = "../roleplay" }

[features]
default = ["graph"]
graph = ["dep:neo4rs"]