[package]
name = "voda-runtime-roleplay"
version = "0.1.0"
edition = "2021"

[dependencies]
voda-runtime = { path = "../../runtime" }
voda-common = { path = "../../common" }
voda-database = { path = "../../database" }
voda-db-macros = { path = "../../db-macros" }
serde.workspace = true
serde_json.workspace = true

anyhow.workspace = true 
async-openai.workspace = true
reqwest.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
sqlx.workspace = true

strum = "0.26"
strum_macros = "0.26"
